2019-11-04 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro gtk_dialog_get_content_area for Gtk<3.0.

    * src/dialogs/geda_file_chooser.c: Rename macro; ChooseClass -> ChooserClass

2019-10-22 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_bulb.c: Add Doxygen code/endcode tags in
      geda_bulb_set_group documentation. Revise geda_bulb_finalize
      to eliminate redundant emission of the group_changed_signal
      when old_group_singleton and was_in_group are both set by
      only checking was_in_group when old_group_singleton is not
      set, effectively the else condition, so as not inadvertently
      reduce the reference count on other group members.

    * tests/test_bulb.c: Add check for geda_bulb_group_get_active_index.

2019-10-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_image_menu_item.c: Revise conditional in geda_image_
      menu_item_sync_action in order to avoid early return. Revise function
      geda_image_menu_item_set_accel_group to handle the else condition of
      accel_group = NULL by removing image_menu_item from any group of which
      it is a member, and update the function documentation.

    * src/widgets/geda_menu.c: Revise function geda_menu_enter_notify to use
      ancillary parent.

    * tests/test_menu_separator.c: Check response from GedaMenuItem
      accessors:

          * geda_menu_item_get_reserve_indicator

2019-10-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_option_menu.c: Revise geda_option_menu_get_history to
      eliminate early returns.

2019-10-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_option_menu.c: Replace return with break in function
      geda_option_menu_select_first_sensitive.

2019-10-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Revise geda_menu_item_set_accel_path to
      use accessor geda_menu_get_accel_group and eliminate ancillary pointer.
