@@ -2,7 +2,8 @@
 
     * include/geda_gtk_compat.h: Add macro gtk_dialog_get_content_area for Gtk<3.0.
 
-    * src/dialogs/geda_file_chooser.c: Rename macro; ChooseClass -> ChooserClass
+    * src/dialogs/geda_file_chooser.c: Rename macro; ChooseClass -> ChooserClass.
+      Utilize gtk_dialog_get_content_area in get_filter_button.
 
 2019-10-22 Wiley E. Hill <wileyhill@gmail.com>
 
